Save horizontal space in player displays. More overlapping, floating divs. Fixes #18.

--- a/pi.css
+++ b/pi.css
@@ -247,11 +247,20 @@
 }
 
 #myhand-wrap { float:left; height:180px; width: 316px; margin-right:.5em; }
-#myevidence-wrap { float:left; height:180px; width: 700px; }
+#myevidence-wrap { float:left; height:180px; width: 660px; }
 
 .spectatorMode #myhand-wrap,
 .spectatorMode #myevidence-wrap {
     display: none;
+}
+
+#playerdisplays > .whiteblock {
+    display:inline-block;
+    min-width:47%;
+    margin-right: 1%;
+}
+#playerdisplays > .whiteblock:nth-of-type(2n) {
+    margin-right: 0;
 }
 
 .locslot .cube20,
